\name{missMethylnews}
\title{missMethyl News}
\encoding{UTF-8}

\section{Version 0.99.1}{\itemize{

\item
First version of package contains functions to perform SWAN normalisation and differential variability analysis for DNA methylation data from Illumina's Infinium HumanMethylation450 beadchip.

}}