@@ -1,7 +1,7 @@
 Package: missMethyl
 Type: Package
 Title: Analysis of methylation array data
-Version: 0.99.4
+Version: 0.99.5
 Date: 2014-06-30
 Author: Belinda Phipson and Jovana Maksimovic
 Maintainer: Belinda Phipson <belinda.phipson@mcri.edu.au>, Jovana
@@ -9,7 +9,7 @@ Maintainer: Belinda Phipson <belinda.phipson@mcri.edu.au>, Jovana
 Depends: R (>= 2.3.0)
 Imports: limma, minfi, methylumi, IlluminaHumanMethylation450kmanifest,
         statmod
-Suggests: minfiData, BiocStyle
+Suggests: minfiData, BiocStyle, edgeR, tweeDEseqCountData
 Description: Normalisation and testing for differential variability for
         data from Illumina's Infinium HumanMethylation450 array. The
         normalisation procedure is subset-quantile within-array
