@@ -17,9 +17,9 @@ citEntry(
   title="DiffVar: A new method for detecting differential variability with applicatino to methylation in cancer and aging",
   author="Phipson, Belinda and Oshlack, Alicia",
   journal="Submitted",
-  volume="XX",
-  number="X",
-  pages="xxx",
+  volume="",
+  number="",
+  pages="",
   year=2014,
   textVersion="Phipson B and Oshlack A. DiffVar: A new method for detecting differential variability with applicatino to methylation in cancer and aging. Submitted 2014."
 )
